# Mercury

./: .gitignore  Cargo.toml  README.md  db_schema.json  diesel.toml  tree.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
admin/: bun.lockb  components.json  package.json  svelte.config.js
admin/src/: app.css
admin/src/lib/: db.ts  index.ts
admin/src/routes/: +layout.svelte
admin/src/routes/posts/: +page.server.ts  +page.svelte
admin/src/routes/posts/[id]/: +page.server.ts  +page.svelte  editor.scss
migrations/2024-07-04-034116_db_init/: down.sql  up.sql
sdk/: bun.lockb  index.ts  package.json
sdk/src/: client.ts  index.ts  types.ts
sdk/src/posts/: posts.ts
server/: .env  Cargo.toml  diesel.toml
server/migrations/2024-05-07-011334_create_posts/: up.sql
server/migrations/2024-05-09-005940_create_users/: up.sql
server/migrations/2024-05-23-234327_create_db/: down.sql  up.sql
server/migrations/2024-05-27-053932_create_tables/: down.sql  up.sql
server/migrations/2024-07-04-034116_db_init/: down.sql  up.sql
server/src/: actors.rs  db_models.rs  db_utils.rs  handler.rs  insertables.rs  lib.rs  main.rs  messages.rs  services.rs
server/src/actors/: author_actor.rs  mod.rs  post_actor.rs  user_actor.rs
server/src/api/: author_endpoints.rs  config.rs  mod.rs  post_endpoints.rs  user_endpoints.rs
server/src/core/config/: mod.rs  route_config.rs
server/src/db/: connection.rs  mod.rs  schema.rs
server/src/db/models/: authors.rs  insertables.rs  mod.rs  models.rs  posts.rs
server/src/domains/authors/: models.rs
server/src/domains/forms/: models.rs
server/src/domains/media/: routes.rs
server/src/domains/users/: models.rs
server/src/handlers/: author_handlers.rs  mod.rs  post_handlers.rs  tag_handlers.rs
server/src/messages/: author_messages.rs  mod.rs  post_messages.rs  user_messages.rs
server/src/models/: insertables.rs  mod.rs  models.rs  posts.rs
server/src/services/: author_api.rs  config.rs  mod.rs  post_api.rs  tag_api.rs
server/tests/: post_tests.rs
src/: lib.rs  main.rs  setup.rs  utils.rs
src/core/config/: mod.rs  route_config.rs
src/core/db/: mod.rs  schema.rs
src/domains/: mod.rs
src/domains/auth/: handlers.rs  models.rs
src/domains/forms/: handlers.rs  routes.rs
src/domains/media/: handlers.rs  models.rs
src/domains/posts/: handlers.rs  models.rs  routes.rs
src/domains/tags/: models.rs
src/domains/users/: handlers.rs  models.rs
src/modules/: mod.rs
src/modules/auth/: handlers.rs  mod.rs  models.rs  services.rs  utils.rs
src/modules/authors/: models.rs
src/modules/media/: models.rs
src/modules/posts/: handlers.rs  mod.rs  models.rs  routes.rs
src/modules/tags/: models.rs
src/modules/users/: handlers.rs  models.rs  routes.rs  services.rs
test/: bun.lockb  package.json
tests/: post_tests.rs
ui/: bun.lockb  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tailwind.config.ts
ui/src/: app.css  app.d.ts  app.html  hooks.ts
ui/src/lib/: stores.ts
ui/src/lib/api/: auth.ts  client.ts  placeholder-quote.ts
ui/src/lib/components/error/: Forbidden.svelte
ui/src/lib/components/login/: Login.svelte
ui/src/lib/components/navigation/: Sidebar.svelte
ui/src/lib/components/register/: Register.svelte
ui/src/lib/components/wysiwyg/: Editor.css  Editor.svelte
ui/src/lib/stores/: auth.ts
ui/src/lib/types/: auth.ts  post.ts
ui/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte  +page.ts
ui/src/routes/dashboard/: +page.svelte
ui/src/routes/posts/: +page.server.ts  +page.svelte
(+8 files in other folders)
