[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
env_logger = "0.11.3"
serde = { version = "1.0.200", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4"] }
